feat: create header

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tarla</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
-<header>
+<header class="header">
+    <img  src="F:\Семестр 4\TarlaProgect\Images\Frame.png" alt="logo" />
+    <ul class="navigation">
+      <li class="li"><a class="link" href="#shop"> Shop</a></li>
+      <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
+      <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
+    </ul>
     
-</header>
+  </header>
 <body>
     
 </body>
