feat: create first section

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<header class="header">
-    <img  src="F:\Семестр 4\TarlaProgect\Images\Frame.png" alt="logo" />
+  </head>
+  <header class="header">
+    <img src="F:\Семестр 4\TarlaProgect\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li"><a class="link" href="#shop"> Shop</a></li>
       <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
       <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
-    
   </header>
-<body>
-    
-</body>
-<footer>
-
-</footer>
+  <body>
+    <section class="section1">
+      <div class="div1">
+        <p class="H1">Fresh pastry kits</p>
+        <p class="P1">
+          Bringing the smells and tastes of your favourite patisserie to your
+          home. Our kits have everything you need to easily make killer pastries
+          every time. We’ve done the tricky bits so all you need to do is roll,
+          proof and bake!
+        </p>
+        <button class="button1">Shop pastry kits</button>
+      </div>
+      <img
+        class="img1"
+        src="F:\Семестр 4\TarlaProgect\Images\Rectangle.png"
+        alt=""
+      />
+    </section>
+  </body>
+  <footer></footer>
 </html>
