feat: create second section

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -32,6 +32,44 @@
         alt=""
       />
     </section>
+    <section id="howItWorks" class="section2">
+      <p class="p2">How it works</p>
+      <div class="div2">
+        <div class="img2">
+          <img src="F:\Семестр 4\TarlaProgect\Images\1.png" alt="" />
+          <p class="H2_2">Choose your fave</p>
+          <p class="p2_2">
+            This sounds easier than it's going to be. We've got all the classics
+            on here, so now it's over to you.
+          </p>
+        </div>
+        <div class="img2">
+          <img src="F:\Семестр 4\TarlaProgect\Images\2.png" alt="" />
+          <p class="H2">Ding dong</p>
+          <p class="p2_2">
+            Next you'll get a beautiful little package delivered to your door,
+            on a day and time slot that you choose.
+          </p>
+        </div>
+        <div class="img2">
+          <img src="F:\Семестр 4\TarlaProgect\Images\3.png" alt="" />
+          <p class="H2">Get baked</p>
+          <p class="p2_2">
+            Take your fresh pastry sheet and fillings, learn our pro techniques
+            then never buy a stale pastry ever again.
+          </p>
+        </div>
+        <div class="img2">
+          <img src="F:\Семестр 4\TarlaProgect\Images\4.png" alt="" />
+          <p class="H2_2">Take the credit</p>
+          <p class="p2_2">
+            It was all you, nudge-nudge wink-wink. We're just happy to be your
+            loyal side-kick.
+          </p>
+        </div>
+      </div>
+      <button class="button2">Shop pastry kits</button>
+    </section>
   </body>
   <footer></footer>
 </html>
