feat: create third section

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -70,6 +70,17 @@
       </div>
       <button class="button2">Shop pastry kits</button>
     </section>
+    <section class="section3">
+        <img class="img3" src="F:\Семестр 4\TarlaProgect\Images\img3.png" alt="" />
+        <div class="div3">
+          <p class="p3">
+            Freshly baked means fresh bakery smells filling your home, warm oozey
+            pastries on your plates, and never needing to get out of your PJs.
+          </p>
+          <img class="img3UnVisible" src="F:\Семестр 4\TarlaProgect\Images\img3.png" alt="" />
+          <button class="button2">Shop pastry kits</button>
+        </div>
+      </section>
   </body>
   <footer></footer>
 </html>
