fix: change relative path for images

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -26,17 +26,13 @@
         </p>
         <button class="button1">Shop pastry kits</button>
       </div>
-      <img
-        class="img1"
-        src="F:\Семестр 4\TarlaProgect\Images\Rectangle.png"
-        alt=""
-      />
+      <img class="img1" src="..\Images\Rectangle.png" alt="" />
     </section>
     <section id="howItWorks" class="section2">
       <p class="p2">How it works</p>
       <div class="div2">
         <div class="img2">
-          <img src="F:\Семестр 4\TarlaProgect\Images\1.png" alt="" />
+          <img src="..\Images\1.png" alt="" />
           <p class="H2_2">Choose your fave</p>
           <p class="p2_2">
             This sounds easier than it's going to be. We've got all the classics
@@ -44,7 +40,7 @@
           </p>
         </div>
         <div class="img2">
-          <img src="F:\Семестр 4\TarlaProgect\Images\2.png" alt="" />
+          <img src="..\Images\2.png" alt="" />
           <p class="H2">Ding dong</p>
           <p class="p2_2">
             Next you'll get a beautiful little package delivered to your door,
@@ -52,7 +48,7 @@
           </p>
         </div>
         <div class="img2">
-          <img src="F:\Семестр 4\TarlaProgect\Images\3.png" alt="" />
+          <img src="..Images\3.png" alt="" />
           <p class="H2">Get baked</p>
           <p class="p2_2">
             Take your fresh pastry sheet and fillings, learn our pro techniques
@@ -60,7 +56,7 @@
           </p>
         </div>
         <div class="img2">
-          <img src="F:\Семестр 4\TarlaProgect\Images\4.png" alt="" />
+          <img src=".\4.png" alt="" />
           <p class="H2_2">Take the credit</p>
           <p class="p2_2">
             It was all you, nudge-nudge wink-wink. We're just happy to be your
@@ -71,16 +67,24 @@
       <button class="button2">Shop pastry kits</button>
     </section>
     <section class="section3">
-        <img class="img3" src="F:\Семестр 4\TarlaProgect\Images\img3.png" alt="" />
-        <div class="div3">
-          <p class="p3">
-            Freshly baked means fresh bakery smells filling your home, warm oozey
-            pastries on your plates, and never needing to get out of your PJs.
-          </p>
-          <img class="img3UnVisible" src="F:\Семестр 4\TarlaProgect\Images\img3.png" alt="" />
-          <button class="button2">Shop pastry kits</button>
-        </div>
-      </section>
+      <img
+        class="img3"
+        src="F:\Семестр 4\TarlaProgect\Images\img3.png"
+        alt=""
+      />
+      <div class="div3">
+        <p class="p3">
+          Freshly baked means fresh bakery smells filling your home, warm oozey
+          pastries on your plates, and never needing to get out of your PJs.
+        </p>
+        <img
+          class="img3UnVisible"
+          src="F:\Семестр 4\TarlaProgect\Images\img3.png"
+          alt=""
+        />
+        <button class="button2">Shop pastry kits</button>
+      </div>
+    </section>
   </body>
   <footer></footer>
 </html>
