feat: create section 4

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <header class="header">
-    <img src="F:\Семестр 4\TarlaProgect\Images\Frame.png" alt="logo" />
+    <img src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li"><a class="link" href="#shop"> Shop</a></li>
       <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
       <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
+    <button>
+      <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
+    </button>
   </header>
   <body>
     <section class="section1">
@@ -48,7 +51,7 @@
           </p>
         </div>
         <div class="img2">
-          <img src="..Images\3.png" alt="" />
+          <img src="..\Images\3.png" alt="" />
           <p class="H2">Get baked</p>
           <p class="p2_2">
             Take your fresh pastry sheet and fillings, learn our pro techniques
@@ -56,7 +59,7 @@
           </p>
         </div>
         <div class="img2">
-          <img src=".\4.png" alt="" />
+          <img src="..\Images\4.png" alt="" />
           <p class="H2_2">Take the credit</p>
           <p class="p2_2">
             It was all you, nudge-nudge wink-wink. We're just happy to be your
@@ -67,22 +70,56 @@
       <button class="button2">Shop pastry kits</button>
     </section>
     <section class="section3">
-      <img
-        class="img3"
-        src="F:\Семестр 4\TarlaProgect\Images\img3.png"
-        alt=""
-      />
+      <img class="img3" src="..\Images\img3.png" alt="" />
       <div class="div3">
         <p class="p3">
           Freshly baked means fresh bakery smells filling your home, warm oozey
           pastries on your plates, and never needing to get out of your PJs.
         </p>
-        <img
-          class="img3UnVisible"
-          src="F:\Семестр 4\TarlaProgect\Images\img3.png"
-          alt=""
-        />
+        <img class="img3UnVisible" src="..\Images\img3.png" alt="" />
         <button class="button2">Shop pastry kits</button>
+      </div>
+    </section>
+    <section id="shop" class="section4">
+      <p class="H4">Shop pastry kits</p>
+      <div class="div4">
+        <div>
+          <img src="..\Images\3-1.png" alt="" />
+          <p class="p4_2">All-Butter Croissant</p>
+          <p class="p4_3">Kit of 6 - £12</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <div>
+          <img src="..\Images\3-2.png" alt="" />
+          <p class="p4_2">Almond Croissant</p>
+          <p class="p4_3">Kit of 6 - £13.50</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <div>
+          <img src="..\Images\3-3.png" alt="" />
+          <p class="p4_2">Raspberry Danish</p>
+          <p class="p4_3">Kit of 6 - £13.50</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <div class="visible4">
+          <img src="..\Images\3-4.png" alt="" />
+          <p class="p4_2">Pain Aux Raisins</p>
+          <p class="p4_3">Kit of 6 - £13.50</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <div class="visible5">
+          <img src="..\Images\3-5.png" alt="" />
+          <p class="p4_2">Apricot Danish</p>
+          <p class="p4_3">Kit of 6 - £13.50</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <div class="visible6">
+          <img src="..\Images\3-6.png" alt="" />
+          <p class="p4_2">Pain Au Chocolat</p>
+          <p class="p4_3">Kit of 6 - £13.50</p>
+          <button class="button4">Add to cart</button>
+        </div>
+        <button class="button4unvisible">Load more</button>
       </div>
     </section>
   </body>
