feat: create section 5

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -122,6 +122,9 @@
         <button class="button4unvisible">Load more</button>
       </div>
     </section>
+    <section class="section5">
+      <img src="..\Images\section5.png" alt="" />
+    </section>
   </body>
   <footer></footer>
 </html>
