--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -125,6 +125,35 @@
     <section class="section5">
       <img src="..\Images\section5.png" alt="" />
     </section>
+    <section id="whoIsTarla" class="section6">
+      <div class="div6">
+        <img class="img6" src="..\Images\6-1.png" alt="" />
+        <p class="p6_1">Better than the bakery</p>
+        <p class="p6_2">
+          You’ll soon be making pastries to rival the best bakeries in town. We
+          use only the best ingredients for generous pastries that taste and
+          smell amazing. So good, that you’ll take all the credit.
+        </p>
+      </div>
+      <div class="div6">
+        <img class="img6" src="..\Images\6-2.png" alt="" />
+        <p class="p6_1">Planet-friendly packaging</p>
+        <p class="p6_2">
+          We’ve done everything we can to make sure our packaging has the
+          lightest footprint on the planet as possible. We’ve made sure
+          everything is recyclable, and use as little packaging as we can.
+        </p>
+      </div>
+      <div class="div6">
+        <img class="img6" src="..\Images\6-3.png" alt="" />
+        <p class="p6_1">Simple to bake at home</p>
+        <p class="p6_3">
+          We’ve done the hard work, so you don’t have to. Every pastry is easy
+          to make with our 3-step instructions and doesn’t require any special
+          tools – just an oven!
+        </p>
+      </div>
+    </section>
   </body>
   <footer></footer>
 </html>
