--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -154,6 +154,19 @@
         </p>
       </div>
     </section>
+    <section class="section7">
+      <div class="div7">
+        <img src="..\Images\7-1.png" alt=""  />
+        <img src="..\Images\7-2.png" alt=""  />
+        <img src="..\Images\7-3.png" alt="" />
+        <img src="..\Images\7-4.png" alt="" />
+        <img src="..\Images\7-5.png" alt=""  />
+      </div>
+      <div class="B">
+        <button class="button7_1">Left</button>
+        <button class="button7_2">Right</button>
+      </div>
+    </section>
   </body>
   <footer></footer>
 </html>
