feat: create section 8

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -156,16 +156,21 @@
     </section>
     <section class="section7">
       <div class="div7">
-        <img src="..\Images\7-1.png" alt=""  />
-        <img src="..\Images\7-2.png" alt=""  />
+        <img src="..\Images\7-1.png" alt="" />
+        <img src="..\Images\7-2.png" alt="" />
         <img src="..\Images\7-3.png" alt="" />
         <img src="..\Images\7-4.png" alt="" />
-        <img src="..\Images\7-5.png" alt=""  />
+        <img src="..\Images\7-5.png" alt="" />
       </div>
       <div class="B">
         <button class="button7_1">Left</button>
         <button class="button7_2">Right</button>
       </div>
+    </section> <div class="line"></div>
+    <section class="section8">
+      <p class="H8">Join our community</p>
+      <p class="p8">and let's get baked</p>
+      <button class="button8"><a href="">Send us a message</a></button>
     </section>
   </body>
   <footer></footer>
