feat: create footer

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -173,5 +173,35 @@
       <button class="button8"><a href="">Send us a message</a></button>
     </section>
   </body>
-  <footer></footer>
+  <footer class="footer">
+    <div><img src="Frame.png" alt="" /></div>
+    <div class="divFooter">
+      <div class="PF">
+        <p class="Hf">Account</p>
+        <p>Sign Up</p>
+        <p>Log In</p>
+      </div>
+      <div class="PF">
+        <p class="Hf">Our company</p>
+        <p>Shop</p>
+        <p>Our story</p>
+        <p>Who is Tarla?</p>
+      </div>
+      <div class="PF">
+        <p class="Hf">Resources</p>
+        <p>FAQ</p>
+        <p>Refund Policy</p>
+        <p>Become an Influencer</p>
+        <p>Privacy Policy</p>
+        <p>Terms of Service</p>
+      </div>
+      <div class="PF">
+        <p class="Hf">Contacts</p>
+        <p>location</p>
+        <p>telephone</p>
+        <p>Github</p>
+        <p>E-mail</p>
+      </div>
+    </div>
+  </footer>
 </html>
