fix: change body color

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaStyle.css"/>
   </head>
   <header class="header">
     <img src="..\Images\Frame.png" alt="logo" />
@@ -17,7 +18,7 @@
       <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
     </button>
   </header>
-  <body>
+  <body class="body">
     <section class="section1">
       <div class="div1">
         <p class="H1">Fresh pastry kits</p>
