--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -5,15 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaStyle.css"/>
+    <link rel="stylesheet" href="mediaStyle.css" />
   </head>
   <header class="header">
+    <div class="hamburger-menu">
+      <input id="menu__toggle" type="checkbox" />
+      <label class="menu__btn" for="menu__toggle">
+        <span></span>
+      </label>
+      <ul class="menu__box" >
+        <li><a class="menu__item" href="#shop">Shop</a></li>
+        <li><a class="menu__item" href="#howItWorks">How it works?</a></li>
+        <li><a class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
+      </ul>
+    </div>
     <img src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li"><a class="link" href="#shop"> Shop</a></li>
       <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
       <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
+
     <button>
       <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
     </button>
@@ -167,7 +179,8 @@
         <button class="button7_1">Left</button>
         <button class="button7_2">Right</button>
       </div>
-    </section> <div class="line"></div>
+    </section>
+    <div class="line"></div>
     <section class="section8">
       <p class="H8">Join our community</p>
       <p class="p8">and let's get baked</p>
