fix: change link for style file

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="..\NotAuthorized\style.css" />
     <link rel="stylesheet" href="mediaStyle.css" />
     <link rel="stylesheet" href="swaper.css" />
     <link
@@ -148,16 +148,7 @@
         </p>
       </div>
     </section>
-    <section class="section7">
-      <div class="div7">
-        <img src="..\Images\7-1.png" alt="" />
-        <img src="..\Images\7-2.png" alt="" />
-        <img src="..\Images\7-3.png" alt="" />
-        <img src="..\Images\7-4.png" alt="" />
-        <img src="..\Images\7-5.png" alt="" />
-      </div>
-      </section>
-    
+       
     <div class="line"></div>
     <section class="section8">
       <p class="H8">Join our community</p>
@@ -167,34 +158,30 @@
   </body>
   <footer class="footer">
     <div><img src="Frame.png" alt="" /></div>
-    <div class="divFooter">
-      <div class="PF">
-        <p class="Hf">Account</p>
-        <p>Sign Up</p>
-        <p>Log In</p>
-      </div>
-      <div class="PF">
-        <p class="Hf">Our company</p>
-        <p>Shop</p>
-        <p>Our story</p>
-        <p>Who is Tarla?</p>
-      </div>
-      <div class="PF">
-        <p class="Hf">Resources</p>
-        <p>FAQ</p>
-        <p>Refund Policy</p>
-        <p>Become an Influencer</p>
-        <p>Privacy Policy</p>
-        <p>Terms of Service</p>
-      </div>
-      <div class="PF">
-        <p class="Hf">Contacts</p>
-        <p>location</p>
-        <p>telephone</p>
-        <p>Github</p>
-        <p>E-mail</p>
-      </div>
+    <div class="PF">
+      <p class="Hf">Account</p>
+      <p>Sign Up</p>
+      <p>Log In</p>
     </div>
+    <div class="PF">
+      <p class="Hf" id="howItWorks">Our company</p>
+      <a href="..\NotAuthorized\location.html">Location</a>
+      <a href="..\Tarla\aboutUs.html">Our story</a>
+      <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a>
+          </div>
+    <div class="PF">
+      <p class="Hf">Resources</p>
+      <a href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+      <a href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+      <a href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+          </div>
+    <div class="PF">
+      <p class="Hf">Contacts</p>     
+      <p>telephone</p>
+      <p>Github</p>
+      <p>E-mail</p>
+    </div>
+  </div>
     <script src="..\Tarla\swaper.js"></script>
   </footer>
   
