fix: change paragraphs in footer

--- a/Tarla/aboutUs.html
+++ b/Tarla/aboutUs.html
@@ -60,14 +60,11 @@
       <div class="PF">
         <p class="Hf">Resources</p>
         <p>FAQ</p>
-        <p>Refund Policy</p>
-        <p>Become an Influencer</p>
         <p>Privacy Policy</p>
-        <p>Terms of Service</p>
       </div>
       <div class="PF">
         <p class="Hf">Contacts</p>
-        <p>location</p>
+        <a href="..\Tarla\location.html">location</a> 
         <p>telephone</p>
         <p>Github</p>
         <p>E-mail</p>
