fix: fix image link, link for pages

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -157,7 +157,7 @@
     </section>
   </body>
   <footer class="footer">
-    <div><img src="Frame.png" alt="" /></div>
+    <img src="..\Images\Frame.png" alt="logo" />
     <div class="PF">
       <p class="Hf">Account</p>
       <p>Sign Up</p>
@@ -165,16 +165,20 @@
     </div>
     <div class="PF">
       <p class="Hf" id="howItWorks">Our company</p>
-      <a href="..\NotAuthorized\location.html">Location</a>
-      <a href="..\Tarla\aboutUs.html">Our story</a>
-      <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a>
-          </div>
+      <ul>
+        <li><a href="..\NotAuthorized\location.html">Location</a></li>
+        <li><a href="..\Tarla\aboutUs.html">Our story</a></li>
+        <li> <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a></li>
+      </ul>
+      </div>
     <div class="PF">
       <p class="Hf">Resources</p>
-      <a href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
-      <a href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
-      <a href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
-          </div>
+      <ul>
+        <li><a href="..\Tarla\aboutUs.html">FAQ</a></li>
+        <li><a href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a></li>
+        <li><a href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a></li>
+      </ul>    
+     </div>
     <div class="PF">
       <p class="Hf">Contacts</p>     
       <p>telephone</p>
